<resources>
    <string name="app_name">Assignment_MAD</string>
    <string name="add_event">Add Event</string>
    <string name="no_movie_found">No Movie</string>
    <string name="event_id">Event ID</string>
    <string name="event_title">Event Title</string>
    <string name="start_date">Start Date</string>
    <string name="venue">Venue</string>
    <string name="myLocation">Location</string>
    <string name="movie">Movie</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="no_movie_selected">No Movie</string>
    <string name="default_time">00:00</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="save_event">Save Event</string>
    <string name="no_attendee_found">No Attendees</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_id">Movie ID: </string>
    <string name="year">Year: </string>
    <string name="movie_title">Movie Title: </string>
    <string name="details">Details</string>
    <string name="no_attendees_selected">No Attendees</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="attendees">Attendees</string>
    <string name="edit_event">Hold to Edit Event</string>
    <string name="sort_event">Sort Event</string>
    <string name="next_year">Next Year</string>
    <string name="next_month">Next Month</string>
    <string name="previous_year">Previous Year</string>
    <string name="previous_month">Previous Month</string>
    <string name="view_calendar">View Calendar</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="no_event">No Event</string>
    <string name="recent_events_on_map">3 Recent Events on Map</string>
    <string name="title_activity_display_soonest_event_on_maps">Map</string>
    <string name="internet_disconnected">Internet Unavailable</string>
    <string name="internet_connected">Internet Available</string>
    <string name="settings">Settings</string>
    <string name="notification_period_in_minutes">Notification Period (in minutes)</string>
    <string name="notification_threshold_in_minutes">Notification Threshold (in minutes)</string>
    <string name="remind_again_duration_in_minutes">Remind Again Duration (in minutes)</string>
    <string name="save_settings">Save Settings</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Location Permission</string>
    <string name="ok">OK</string>
</resources>
